test/classes/errors/nilability-return-yield/return-shared.good
return-shared.chpl:3: In function 'P':
return-shared.chpl:3: error: cannot return 'shared C?' when the declared return type is 'shared C'
